force-app/main/default/objects/IntegracaoElera__c/IntegracaoElera__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Integração Elera</label>
</CustomObject>