force-app/main/default/objects/IntegracaoElera__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint (URL base da org)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>