force-app/main/default/objects/IntegracaoElera__c/fields/Token1__c.field-meta.xml
<CustomField>
    <fullName>Token1__c</fullName>
    <label>Bearer Token (parte 1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>