force-app/main/default/objects/IntegracaoElera__c/fields/Token2__c.field-meta.xml
<CustomField>
    <fullName>Token2__c</fullName>
    <label>Bearer Token (parte 2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>